# project-tether

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  launch_posts.md  progress_so_far.html  pyproject.toml  tether_easy_guide.html  tether_handoff.html  what codex did
docs/: how-to-use.html  setup.html
examples/ratelimiter/: DEMO_SCRIPT.md  demo.py
examples/ratelimiter/src/: ratelimiter.py
src/tether/: __init__.py  __main__.py  ask.py  cli.py  config.py  env.py
src/tether/attribution/: attributor.py
src/tether/bootstrap/: proposer.py  reviewer.py  runner.py  scanner.py
src/tether/coverage/: display.py
src/tether/ledger/: display.py  queries.py  schema.py  store.py
src/tether/plan/: edge_cases.py  impact.py  notes.py  runner.py  test_gen.py
src/tether/prompts/: templates.py
src/tether/state/: display.py  file_cache.py  manifest.py  store.py
src/tether/verify/: verifier.py
src/tether/watch/: debounce.py  runner.py
src/tether/watcher_models/: __init__.py  anthropic_haiku.py  base.py  ollama.py
src/tether/whisper/: notes_writer.py
tests/: test_bootstrap.py  test_cache_prune.py  test_cli_version.py  test_config_language.py  test_coverage.py  test_edge_cases.py  test_env.py  test_env_example.py  test_file_cache.py  test_haiku_watcher.py  test_impact.py  test_impact_parser.py  test_integration_haiku.py  test_intent_check.py  test_invariants_jsts.py  test_ledger.py  test_ollama_model.py  test_prompts.py  test_scanner_jsts.py  test_targeted_tests.py  test_test_gen.py  test_verify.py  test_version.py  test_watch.py  test_watch_paths.py
(+5 files in other folders)
